[tool.poetry]
name = "adsb-poland-history"
version = "0.1.0"
description = ""
authors = ["Piotr Adamczyk <piotr.adamczyk@lime.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
shapely = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
